Completed left side

--- a/index.html
+++ b/index.html
@@ -4,10 +4,64 @@
     <meta charset="UTF-8">
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
-    <title>My First Webpage</title>
+    <title>Sign up Form</title>
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <div class='main-container'>
+      <div class="left">
+        <div class="heading">
+          <img src="odin-lined.png" class="logo" alt ="an illustration of Odin">
+          ODIN
+        </div>
+      </div>
+      <div class="right">
+        <div class="intro">
+          <p>"This is not a real online service! You know you need something
+            like this in your life to help you realize your deepest dreams.<br>Sign
+            up <i>now</i> to get started.
+          </p>
+          <p>
+            You <i>know</i> you want to.
+        </div>
+        <div class="encouragement">
+          <p>Let's do this!</p>
+        </div>
+        <div class="forms">
+          <div class="first_name">
+            First Name
+            <label for="first_name"></label>
+            <input type="text" id="first_name" name="first_name">
+          </div>
+          <div class="last_name">
+            Last Name
+            <label for="last_name"></label>
+            <input type="text" id="last_name" name="last_name">
+          </div>
+          <div class="email">
+            Email
+            <label for="user_email"></label>
+            <input type="email" id="user_email" name="email">
+          </div>
+          <div class="phone_number">
+            Phone Number
+            <label for="phone_number"></label>
+            <input type="number" id="phone_number" name="phone_number">
+          </div>
+          <div class="password">
+            Password
+            <label for="user_password"></label>
+            <input type="password" id="user_password" name="password">
+          </div>
+          <div class="confirm_password">
+            Confirm Password
+            <label for="user_confirm_password"></label>
+            <input type="password" id="confirm_password" name="confirm_password">
+          </div>
+        </div>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
+
