Set up forms, yet to be validated

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
           <img src="odin-lined.png" class="logo" alt ="an illustration of Odin">
           ODIN
         </div>
+        <div class="credits">
+          <p>Photo by rogov</p>
+        </div>
       </div>
       <div class="right">
         <div class="intro">
@@ -28,38 +31,49 @@
           <p>Let's do this!</p>
         </div>
         <div class="forms">
-          <div class="first_name">
-            First Name
-            <label for="first_name"></label>
-            <input type="text" id="first_name" name="first_name">
+          <div class="first">
+            <div class="first_name">
+              <p>First Name</p>
+              <label for="first_name"></label>
+              <input type="text" id="first_name" name="first_name" required>
+            </div>
+            <div class="last_name">
+              <p>Last Name</p>
+              <label for="last_name"></label>
+              <input type="text" id="last_name" name="last_name" required>
+            </div>
           </div>
-          <div class="last_name">
-            Last Name
-            <label for="last_name"></label>
-            <input type="text" id="last_name" name="last_name">
+          <div class="second">
+            <div class="email">
+              <p>Email</p>
+              <label for="user_email"></label>
+              <input type="email" id="user_email" name="email" required>
+            </div>
+            <div class="phone_number">
+              <p>Phone Number</p>
+              <label for="phone_number"></label>
+              <input type="number" id="phone_number" name="phone_number" required>
+            </div>
           </div>
-          <div class="email">
-            Email
-            <label for="user_email"></label>
-            <input type="email" id="user_email" name="email">
-          </div>
-          <div class="phone_number">
-            Phone Number
-            <label for="phone_number"></label>
-            <input type="number" id="phone_number" name="phone_number">
-          </div>
-          <div class="password">
-            Password
-            <label for="user_password"></label>
-            <input type="password" id="user_password" name="password">
-          </div>
-          <div class="confirm_password">
-            Confirm Password
-            <label for="user_confirm_password"></label>
-            <input type="password" id="confirm_password" name="confirm_password">
+          <div class="third">
+            <div class="password">
+              <p>Password</p>
+              <label for="user_password"></label>
+              <input type="password" id="user_password" name="password" required>
+            </div>
+            <div class="confirm_password">
+              <p>Confirm Password</p>
+              <label for="user_confirm_password"></label>
+              <input type="password" id="confirm_password" name="confirm_password" required>
+            </div>
           </div>
         </div>
-        </p>
+        <div>
+          <button type="submit" class="button">Create Account</button>
+        </div>
+        <div class="login_reminder">
+          <p>Already have an account? <a href="https://github.com/CypressWriter">Log In</a></p>
+        </div>
       </div>
     </div>
   </body>
