--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div>
-          <button type="submit" class="button">Create Account</button>
+          <button type="submit" id="submitButton" class="button">Create Account</button>
         </div>
         <div class="login_reminder">
           <p>Already have an account? <a href="https://github.com/CypressWriter">Log In</a></p>
